--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,9 +1,11 @@
 @use './mixins';
 
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;500&display=swap');
+
 :root {
   // font-family
-  --headings-ff: 'Space Grotesk', Helvetica, Arial, sans-serif;
-  --base-ff: 'Montserrat', Helvetica, Arial, sans-serif;
+  --headings-ff: 'Crimson', serif;
+  --base-ff: 'Nunito', Helvetica, Arial, sans-serif;
 
   // font-size
   font-size: 62.5%;
@@ -50,24 +52,20 @@ h3,
 h4,
 h5,
 h6 {
-  line-height: 1.3;
+  line-height: 1;
   font-family: var(--headings-ff);
 }
 
 h1 {
   font-size: var(--xl-fs);
   font-weight: 700;
-  line-height: 1;
 }
 
 h2 {
   font-size: var(--lg-fs);
   font-weight: 600;
-  line-height: 1;
 }
 
 h3 {
   font-size: var(--md-fs);
-  font-weight: 500;
-  line-height: 1.25;
 }
